feat: :sparkles: linked correctly the db and adjusted prev and next buttons
