# rickemorty/src/main/java/com/marcello/rickemorty/CharactersResponse.java
@@ -1,0 +1,24 @@
+package com.marcello.rickemorty;
+
+import lombok.Data;
+import lombok.Getter;
+import lombok.Setter;
+
+import java.util.List;
+
+@Getter
+@Setter
+public class CharactersResponse {
+
+    private Info info;
+    private List<Character> results;
+
+    @Data
+    public static class Info {
+        private int count;
+        private int pages;
+        private String next;
+        private String prev;
+    }
+
+}
